# wine_gpt

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  wine_app.py  wine_data.csv
.github/workflows/: master.yml
widgets/: data.py  initialize.py
widgets/authentication/: auth_config.yaml  login_widget.py  reset_password.py  user_registration.py
widgets/data/: changes.py  data.py  data_query.py  filtering.py  insert_wine_data.py
